--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <title>Food Munch</title>
 <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-white">
+      <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
           <a class="navbar-brand" href="#">
             <img
@@ -53,7 +53,7 @@
             </div>
         </div>
       </div>
-      <div class="container">
+      <div class="container-fluid">
         <div class="col-12">
         <h1 class="page-headding pt-2">Why We Choose Us?</h1>
         <p>We use Various original recipes and famous food-items.</p>
@@ -92,7 +92,7 @@
         </div>
       </div>
       </div>
-      <div class="container">
+      <div class="container-fluid">
         <div class="col-12">
           <h1 class="page-headding">Explore Menu</h1>
         </div>
