--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
         </div>
       </div>
-      <div class="container-fluid">
+      <div class="container">
         <div class="col-12">
         <h1 class="page-headding pt-2">Why We Choose Us?</h1>
         <p>We use Various original recipes and famous food-items.</p>
@@ -92,7 +92,7 @@
         </div>
       </div>
       </div>
-      <div class="container-fluid">
+      <div class="container">
         <div class="col-12">
           <h1 class="page-headding">Explore Menu</h1>
         </div>
