--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </div>
         </div>
       </nav>
-      <div class="container-fluid">
+      <div class="container">
         <div class="row">
             <div class="main-image-bag d-flex flex-column justify-content-center">
             <div class="text-center">
