--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
               <h1 class="page-headding" style="font-size: 25px;">Fresh, Healthy, Organic, Delicious Fruits</h1>
               <p class="page-para">
                   Enjoy hassle-free payment with the plenitude of payment options
-                  available for you. It's quite a sight to see your food arrive to your door.
+                  available for you.
                   Plus, you get a <span class="span-section">25% OFF</span> discount on every order every time on
                   online.
               </p>
