--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6423678974504775"
+     crossorigin="anonymous"></script>
     <script type="text/javascript" data-cfasync="false">
 /*<![CDATA[/* */
 (function(){var g=window,o="ee7fa4ee62b1688f70e266b989cf3306",p=[["siteId",767+777*178-825+4952424],["minBid",0],["popundersPerIP","0"],["delayBetween",0],["default",false],["defaultPerDay",0],["topmostLayer","auto"]],r=["d3d3LmJsb2NrYWRzbm90LmNvbS94anF1ZXJ5LmplZGl0YWJsZS5taW4uY3Nz","ZG5oZmk1bm4yZHQ2Ny5jbG91ZGZyb250Lm5ldC9uRnFwL2ZXYWxsb3AubWluLmpz"],y=-1,s,f,n=function(){clearTimeout(f);y++;if(r[y]&&!(1738811789000<(new Date).getTime()&&1<y)){s=g.document.createElement("script");s.type="text/javascript";s.async=!0;var k=g.document.getElementsByTagName("script")[0];s.src="https://"+atob(r[y]);s.crossOrigin="anonymous";s.onerror=n;s.onload=function(){clearTimeout(f);g[o.slice(0,16)+o.slice(0,16)]||n()};f=setTimeout(n,5E3);k.parentNode.insertBefore(s,k)}};if(!g[o]){try{Object.freeze(g[o]=p)}catch(e){}n()}})();
@@ -18,6 +20,16 @@
 </head>
 <title>Food Munch</title>
 <body>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6423678974504775"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="autorelaxed"
+     data-ad-client="ca-pub-6423678974504775"
+     data-ad-slot="7192485267"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
       <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
           <a class="navbar-brand" href="#">
