--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 /*]]>/* */
 </script>-->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https:; script-src 'self' https:;">
-    <link rel="stylesheet" type="text/css" href="FoodMunch.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/x-icon" href="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/food-munch-img.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
